[tool.poetry]
name = "decoding sensor data"
version = "0.1.0"
description = ""
authors = ["Thomas van Dam <thomasvandam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docutils = "0.16"
Markdown = "3.2.1"
mongoquery = "1.3.6"
objectpath = "0.6.1"
parso = "0.6.2"
PyYAML = "5.3.1"
typer = "0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-json-report = "1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
